added rent button

--- a/assets_main/templates/assets_main/assets_status.html
+++ b/assets_main/templates/assets_main/assets_status.html
@@ -27,7 +27,7 @@
             <td>대여중</td>
             <td>-</td>
             <td>
-              <button type="submit" class="btn btn-outline-primary btn-return">반납하기</button>
+              <button type="submit" class="btn btn-primary btn-return">반납하기</button>
             </td>
           </tr>
           <tr>
@@ -38,7 +38,7 @@
             <td>보관중</td>
             <td>-</td>
             <td>
-              <button type="submit" class="btn btn-outline-primary btn-return">반납하기</button>
+              <button type="submit" class="btn btn-primary btn-return">반납하기</button>
             </td>
           </tr>
           <tr>
@@ -49,7 +49,7 @@
             <td>대여중</td>
             <td>-</td>
             <td>
-              <button type="submit" class="btn btn-outline-primary btn-return">반납하기</button>
+              <button type="submit" class="btn btn-primary btn-return">반납하기</button>
             </td>
           </tr>
           <tr>
@@ -60,7 +60,40 @@
             <td>대여중</td>
             <td>-</td>
             <td>
-              <button type="submit" class="btn btn-outline-primary btn-return">반납하기</button>
+              <button type="submit" class="btn btn-primary btn-return">반납하기</button>
+            </td>
+          </tr>
+          <tr>
+            <td>글로웰시스템</td>
+            <td>Zenbook</td>
+            <td>20. 01. 25</td>
+            <td>20. 02. 21</td>
+            <td>대여중</td>
+            <td>-</td>
+            <td>
+              <button type="submit" class="btn btn-success btn-return">대여하기</button>
+            </td>
+          </tr>
+          <tr>
+            <td>글로웰시스템</td>
+            <td>Zenbook</td>
+            <td>20. 01. 25</td>
+            <td>20. 02. 21</td>
+            <td>대여중</td>
+            <td>-</td>
+            <td>
+              <button type="submit" class="btn btn-success btn-return">대여하기</button>
+            </td>
+          </tr>
+          <tr>
+            <td>글로웰시스템</td>
+            <td>Zenbook</td>
+            <td>20. 01. 25</td>
+            <td>20. 02. 21</td>
+            <td>대여중</td>
+            <td>-</td>
+            <td>
+              <button type="submit" class="btn btn-success btn-return">대여하기</button>
             </td>
           </tr>
         </table>
