deleted rent files

--- a/assets_main/static/css/partials/nav-bar.css
+++ b/assets_main/static/css/partials/nav-bar.css
@@ -25,3 +25,7 @@
   font-size: 14px !important;
   padding: 3px 10px !important;
 }
+
+.divier__none .dropdown-menu .inner .inner li:first-child {
+  display: none;
+}
