designed upload table

--- a/document_main/templates/document/document_add.html
+++ b/document_main/templates/document/document_add.html
@@ -95,6 +95,24 @@
           <input type="file" id="file_upload" />
           <label for="file_delete">파일 삭제</label>
         </div>
+        <div class="form-group document__add">
+          <table
+            class="table table-striped table-bordered table-hover text-center"
+          >
+            <thead>
+              <tr>
+                <th>
+                  <input type="checkbox" />
+                </th>
+                <th>파일명</th>
+                <th>크 기</th>
+              </tr>
+            </thead>
+            <tr>
+              <td colspan="3">첨부파일이 없습니다.</td>
+            </tr>
+          </table>
+        </div>
 
         <div class="text-right submit-box">
           <button type="button" class="btn btn-outline-danger">
