--- a/login/static/css/login.css
+++ b/login/static/css/login.css
@@ -62,6 +62,13 @@ nav {
 }
 
 .login__main .login__id,
+.login__main .login__pw {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login__main .login__id,
 .login__main .login__pw,
 .login__main .login__lost-pw {
   padding-top: 20px;
@@ -69,12 +76,25 @@ nav {
 
 .login__main input {
   font-family: FontAwesome;
+  background-color: inherit;
+  outline: none;
+  border: none;
+  color: white;
+  width: 200px;
+  padding: 3px 5px;
+  border-bottom: 3px solid #30336b;
+}
+
+.login__main i {
+  font-size: 20px;
+  color: white;
+  margin-right: 10px;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
   .container.login-size {
     width: 100%;
-    height: 90%;
+    height: 100%;
   }
 }
 
