--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,20 +1,47 @@
-.container.login__content {
+.body {
+  background: url("/static/img/body-bg.jpg") no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav {
+  display: none !important;
+}
+
+.login__content {
   border-radius: 0.75em;
   width: 480px;
-  height: 600px;
+  height: 700px;
+  text-align: center;
+}
+
+.login__header h1 {
+  font-weight: 700;
+  margin-bottom: 0px;
+  padding-top: 10px;
+}
+
+.login__header span {
+  font-weight: 600;
 }
 
 .login__content .login__form {
   width: 100%;
-  background-color: yellow;
   height: 100%;
+  border-radius: 10px;
+  border: 2px solid white;
+  overflow: hidden;
+  box-shadow: 0px 0px 55px 1px white;
 }
 
 .login__form .login__top {
   width: 100%;
-  height: 50%;
+  height: 59%;
   overflow: hidden;
-  background: url("/static/img/logo.jpg");
+  background: url("/static/img/login.jpg") no-repeat;
+  background-size: 100%;
 }
 
 .login__top img {
@@ -23,7 +50,78 @@
 
 .login__form .login__bottom {
   width: 100%;
-  height: 50%;
+  height: 41%;
   overflow: hidden;
-  background-color: green;
+  background-color: #9c88ff;
+  color: #2c3e50;
+}
+
+.login__bottom .login__contents {
+  width: 100%;
+  height: 100%;
+}
+
+.login__main .login__id,
+.login__main .login__pw {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login__main .login__id,
+.login__main .login__pw,
+.login__main .login__lost-pw {
+  padding-top: 20px;
+}
+
+.login__main input {
+  font-family: FontAwesome;
+  background-color: inherit;
+  outline: none;
+  border: none;
+  color: white;
+  width: 200px;
+  padding: 3px 5px;
+  border-bottom: 3px solid #30336b;
+}
+
+.login__main i {
+  font-size: 20px;
+  color: white;
+  margin-right: 10px;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .container.login-size {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (min-width: 500px) {
+  .container.login-size {
+    width: 480px;
+    height: 700px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container.login-size {
+    width: 480px;
+    height: 700px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container.login-size {
+    width: 480px;
+    height: 700px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container.login-size {
+    width: 480px;
+    height: 700px;
+  }
 }
