changed member_name to member_id

--- a/assets/templates/assets_main/assets_main.html
+++ b/assets/templates/assets_main/assets_main.html
@@ -22,7 +22,7 @@
           </thead>
           {% for asset in assets %}
           <tr>
-            <td>{{ asset.member_name }}</td>
+            <td>{{ asset.member_id }}</td>
             <td>{{ asset.mnfacture }}</td>
             <td>{{ asset.memory }}</td>
             <td>{{ asset.harddisk }}</td>
