--- a/assets/templates/assets_main/assets_status.html
+++ b/assets/templates/assets_main/assets_status.html
@@ -7,7 +7,7 @@
     </div>
     <form class="card-body">
       <p class="card-text">
-        <table class="table table-striped table-bordered table-hover text-center">
+        <table class="table striped table-bordered" id="myTable">
           <thead>
             <tr>
               <th>대여자</th>
@@ -19,109 +19,40 @@
               <th>반납처리</th>
             </tr>
           </thead>
+
           {% for asset_keep in assets_keep %}
           <tr>
-            <td>{{ asset_keep.member_name }}</td>
-            <td>{{ asset_keep.mnfacture }}</td>
-            <td>{{ asset_keep.memory }}</td>
-            <td>{{ asset_keep.harddisk }}</td>
-            <td>{{ asset_keep.is_where }}</td>
-            <td>{{ asset_keep.cpu }}</td>
+            <td>{{ asset_keep.member_id }}</td>
+            <td>{{ asset_keep.model }}</td>
+            <td> - </td>
+            <td> - </td>
+            {% if asset_keep.is_state == 5 %}
+            <td>보관중</td>
+            {% endif %}
+            <td>{{ asset_keep.comments }}</td>
+            <td>
+              <button type="button" class="btn btn-success btn-return" id="{{ asset_keep.id }}" data-toggle="modal"
+                data-target="#exampleModal">대여하기</button>
+              <span class="test" style="display: none;">{{ asset_keep.id }}</span>
+            </td>
           </tr>
           {% endfor %}
 
           {% for asset_rent in assets_rent %}
           <tr>
-            <td>{{ asset_rent.member_name }}</td>
-            <td>{{ asset_rent.mnfacture }}</td>
-            <td>{{ asset_rent.memory }}</td>
-            <td>{{ asset_rent.harddisk }}</td>
-            <td>{{ asset_rent.is_where }}</td>
-            <td>{{ asset_rent.cpu }}</td>
+            <td>{{ asset_rent.member_id }}</td>
+            <td>{{ asset_rent.model }}</td>
+            <td></td>
+            <td></td>
+            {% if asset_rent.is_state == 3 %}
+            <td>대여중</td>
+            {% endif %}
+            <td>{{ asset_rent.comments }}</td>
+            <td>
+              <button type="submit" class="btn btn-primary btn-return">반납하기</button>
+            </td>
           </tr>
           {% endfor %}
-
-
-
-
-
-          <!-- <tr>
-            <td>정세욱</td>
-            <td>Zenbook</td>
-            <td>20. 01. 25</td>
-            <td>20. 02. 21</td>
-            <td>대여중</td>
-            <td>-</td>
-            <td>
-              <button type="submit" class="btn btn-primary btn-return">반납하기</button>
-            </td>
-          </tr>
-          <tr>
-            <td>글로웰시스템</td>
-            <td>Mac</td>
-            <td>-</td>
-            <td>-</td>
-            <td>보관중</td>
-            <td>-</td>
-            <td>
-              <button type="submit" class="btn btn-primary btn-return">반납하기</button>
-            </td>
-          </tr>
-          <tr>
-            <td>정세욱</td>
-            <td>Zenbook</td>
-            <td>20. 01. 25</td>
-            <td>20. 02. 21</td>
-            <td>대여중</td>
-            <td>-</td>
-            <td>
-              <button type="submit" class="btn btn-primary btn-return">반납하기</button>
-            </td>
-          </tr>
-          <tr>
-            <td>정세욱</td>
-            <td>Zenbook</td>
-            <td>20. 01. 25</td>
-            <td>20. 02. 21</td>
-            <td>대여중</td>
-            <td>-</td>
-            <td>
-              <button type="submit" class="btn btn-primary btn-return">반납하기</button>
-            </td>
-          </tr>
-          <tr>
-            <td>글로웰시스템</td>
-            <td>Zenbook</td>
-            <td>20. 01. 25</td>
-            <td>20. 02. 21</td>
-            <td>대여중</td>
-            <td>-</td>
-            <td>
-              <button type="submit" class="btn btn-success btn-return">대여하기</button>
-            </td>
-          </tr>
-          <tr>
-            <td>글로웰시스템</td>
-            <td>Zenbook</td>
-            <td>20. 01. 25</td>
-            <td>20. 02. 21</td>
-            <td>대여중</td>
-            <td>-</td>
-            <td>
-              <button type="submit" class="btn btn-success btn-return">대여하기</button>
-            </td>
-          </tr>
-          <tr>
-            <td>글로웰시스템</td>
-            <td>Zenbook</td>
-            <td>20. 01. 25</td>
-            <td>20. 02. 21</td>
-            <td>대여중</td>
-            <td>-</td>
-            <td>
-              <button type="submit" class="btn btn-success btn-return">대여하기</button>
-            </td>
-          </tr> -->
         </table>
       </p>
     </form>
@@ -129,4 +60,59 @@
 </div>
 
 
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <form class="modal-content" method="POST">{% csrf_token %}
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">대여신청</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="modal-body__asset">
+          <span>자산 선택</span>
+          {{ rent_form.asset }}
+        </div>
+        <div class="modal-body__stdate">
+          <span>대여 날짜</span>
+          {{ rent_form.stdate }}
+        </div>
+        <div class="modal-body__eddate">
+          <span>반납 날짜</span>
+          {{ rent_form.eddate }}
+        </div>
+        <div class="modal-body__id">
+          <span>대여자 id</span>
+          {{ rent_form.member_id }}
+        </div>
+        <div class="modal-body__comments">
+          <span>기타 </span>
+          {{ rent_form.comments }}
+        </div>
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
+        <button type="submit" class="btn btn-primary">신청</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+
+
+
 {% endblock content %} {% block title %} 자산 대여 현황 {% endblock %}
+{% block js %}
+<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+<script src="{% static '/js/dataTable.js' %}"></script>
+{% endblock%}
+
+{% block css %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">{% endblock %}
