--- a/assets/templates/assets_main/assets_add.html
+++ b/assets/templates/assets_main/assets_add.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %} {% block content %} {% load static %}
-
 <div class="container assets-container">
   <div class="card assets">
     <div class="card-header assets-header">
@@ -12,53 +11,62 @@
           <div class="form-group col-md-12">
             <div class="form-group">
               <label>소유자</label>
-              {{ form.member_id }}
+              {{ form.member_name }}
             </div>
             <div class="form-group">
               <label>제조사</label>
-              {{ form.mnfacture }}
+              <input type="text" class="form-control" placeholder="ex) LG, Asus" autocomplete="off"
+                id="asset_mnfacture">
             </div>
-
+            <div class="form-group">
+              <label>모델명</label>
+              <input type="text" class="form-control" placeholder="ex) ZenBook-UX362FA_UX362FA" autocomplete="off"
+                id="asset_model">
+            </div>
+            <div class="form-group">
+              <label>시리얼</label>
+              <input type="text" class="form-control" placeholder="ex) N0CV1905MB0083116" autocomplete="off"
+                id="asset_serial">
+            </div>
             <div class="form-group ">
               <label>자산 상태</label>
               {{ form.is_state }}
             </div>
             <div class="form-group ">
               <label>CPU</label>
-              {{ form.cpu }}
+              <input type="text" class="form-control" placeholder="ex) intel(R) Core(TM) i5-8250U CPU @ 1.6Ghz 1.80GHz"
+                autocomplete="off" id="asset_cpu">
             </div>
             <div class="form-group">
               <label>메모리</label>
-              {{ form.memory }}
+              <input type="text" class="form-control" placeholder="ex) 16GB" autocomplete="off" id="asset_memory">
             </div>
             <div class="form-group ">
               <label>디스크</label>
-              {{ form.harddisk }}
-            </div>
-            <div class="form-group">
-              <label>모델명</label>
-              {{ form.model }}
+              <input type="text" class="form-control" placeholder="ex) 256GB" autocomplete="off" id="asset_harddisk">
             </div>
             <div class="form-group">
               <label>사용장소</label>
-              {{ form.is_where }}
+              <input type="text" class="form-control" placeholder="ex) 남부팀, 본사, 원주(인터넷망), 원주(업무망)" autocomplete="off"
+                id="asset_is-where">
             </div>
             <div class="form-group">
               <label>구매 날짜</label>
-              {{ form.purchase_date }}
+              <input type="text" name="purchase_date" id="datepicker1"
+                class="form-control calendar__start hasDatepicker" autocomplete="off" id="asset_purchase-date">
             </div>
             <div class="form-group">
               <label>기 타</label>
-              {{ form.comments }}
+              <textarea class="form-control col-sm-12" rows="5" id="asset_comments"></textarea>
             </div>
           </div>
         </div>
         <div class="text-right submit-box">
-          <button type="button" class="btn btn-outline-danger">
+          <button type="button" class="btn btn-outline-danger" onclick="asset_add_cancel()">
             취소
           </button>
-          <button type="submit" class="btn btn-outline-secondary btn-submit" onclick="check()">
-            신청하기
+          <button type="button" class="btn btn-outline-secondary" onclick="asset_add_apply()">
+            등록
           </button>
         </div>
       </form>
@@ -66,6 +74,15 @@
   </div>
 </div>
 {% endblock %} {% block title %} 자산관리 대여 {% endblock %}
-{% block js %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
+<link rel="stylesheet" href="{% static 'css/datepicker/datepicker3.css' %}">
+{% endblock %}
 
-<script src="{% static '/js/alert.js' %}"></script>{% endblock%}
+{% block js %}
+<script src="{% static 'js/assets/add.js' %}"></script>
+<script src="{% static 'js/selectpicker/bootstrap-select.js' %}"></script>
+<script src="{% static 'js/datepicker/bootstrap-datepicker.js' %}"></script>
+<script src="{% static 'js/datepicker/bootstrap-datepicker.kr.js' %}"></script>
+<script src="{% static 'js/datepicker/datepicker.js' %}"></script>
+{% endblock %}
