--- a/assets/templates/assets_main/assets_main.html
+++ b/assets/templates/assets_main/assets_main.html
@@ -11,23 +11,25 @@
           <thead>
             <tr>
               <th>소유자</th>
-              <th>제조사</th>
+              <th>제조사 및 모델명</th>
+              <th>시리얼</th>
               <th>메모리</th>
               <th>저장소</th>
-              <th>위치</th>
               <th>CPU</th>
+              <th>위치</th>
               <th>상태</th>
               <th>기타</th>
             </tr>
           </thead>
           {% for asset in assets %}
           <tr>
-            <td>{{ asset.member_id }}</td>
-            <td>{{ asset.mnfacture }}</td>
+            <td>{{ asset.member_name }}</td>
+            <td>{{ asset.mnfacture }} ({{ asset.model }})</td>
+            <td>{{ asset.serial }}</td>
             <td>{{ asset.memory }}</td>
             <td>{{ asset.harddisk }}</td>
-            <td>{{ asset.is_where }}</td>
             <td>{{ asset.cpu }}</td>
+            <td>{{ asset.is_where }}</td>
 
             {% if asset.is_state == 1 %}
             <td>개인사용</td>
@@ -40,7 +42,12 @@
             {% elif asset.is_state == 5 %}
             <td>보관중</td>
             {% endif %}
+            {% if asset.comments is None %}
+            <td></td>
+            {% else %}
             <td>{{ asset.comments }}</td>
+            {% endif %}
+
           </tr>
           {% endfor %}
         </table>
@@ -49,17 +56,13 @@
   </div>
 </div>
 
-
-
-
-
 {% endblock content %} {% block title %} 자산 현황 {% endblock %}
-{% block js %}
-<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
-<script src="{% static '/js/dataTable.js' %}"></script>{% endblock%}
 
 {% block css %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
-<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">{% endblock %}
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
+{% endblock %}
+
+{% block js %}
+<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+<script src="{% static 'js/datatable/dataTable.js' %}"></script>{% endblock %}
