--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -9,15 +9,9 @@
   <title>{% block title %}{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/assets.css' %}" />
   <link rel="stylesheet" href="{% static 'css/document.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/fontAwesome/font-awesome.css' %}">
   {% block css %} {% endblock %}
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
-
 </head>
 
 <body class="body">
@@ -43,7 +37,7 @@
               자산 현황
             </a>
             <a class="dropdown-item" href="{% url 'assets_status' %}">
-              자산 대여 현황
+              대여신청 및 현황
             </a>
 
             <div class="dropdown-divider"></div>
@@ -79,9 +73,8 @@
       <ul class="navbar-nav navbar-right">
         <li class="nav-item profile">
           <a href="#" class="text-reset text-decoration-none profile-link">
-            정세욱 / 전임연구원
+            {{request.session.member_name}} / {{request.session.member_rank}} / {{request.session.member_dept}}
           </a>
-
           <a href="#">
             <button type="button" class="btn btn-outline-light ">
               로그아웃
@@ -92,23 +85,13 @@
     </div>
   </nav>
 
-  {% block content %} {% endblock %} {% block login%} {% endblock %}
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  {% block content %} {% endblock %}
+  {% block login %} {% endblock %}
+  <script trype="text/javascript" src="{% static 'js/bootstrap/jquery-3.4.1.min.js' %}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
-  <script src="{% static 'js/datepicker.js' %}"></script>
+  <script trype="text/javascript" src="{% static 'js/bootstrap/bootstrap.js' %}"></script>
   {% block js %} {% endblock %}
 </body>
 
