--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -1,43 +1,108 @@
-{% extends 'base.html' %} {% block login %} {% load static %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
 
-<form class="login__content container login-size">
-  <div class="login__form">
-    <div class="login__top">
-      <!-- <img src="{% static 'img/login.jpg'%}" alt="" class="login__photo" /> -->
-    </div>
-    <div class="login__bottom">
-      <div class="login__contents">
-        <div class="login__header">
-          <h1>USER LOGIN</h1>
-          <span>Welcome back</span>
-        </div>
-        <div class="login__main">
-          <div class="login__id">
-            <div class="login__icon">
-              <i class="fa fa-user"></i>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>로그인</title>
+  <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
+</head>
+
+<body class="body">
+  <form class="login__content container login-size" action="/login/check" method="post">
+    {% csrf_token %}
+    <div class="login__form">
+      <div class="login__top">
+      </div>
+      <div class="login__bottom">
+        <div class="login__contents">
+          {% if message == '' %}
+          <div class="login__header">
+            <h1>USER LOGIN</h1>
+            <span>Welcome back</span>
+          </div>
+          {% else %}
+          <div class="login__header">
+            <h1>USER LOGIN</h1>
+            <span style="color:red; font-weight: bold;">{{ message }}</span>
+          </div>
+          {% endif %}
+          <div class="login__main">
+            <div class="login__id">
+              <div class="login__icon">
+                <i class="fa fa-user"></i>
+              </div>
+              <input type="text" name="member_id" placeholder="아이디입력" value="swjung" autofocus required/>
             </div>
-            <input type="text" />
+            <div class="login__pw">
+              <i class="fa fa-lock"></i>
+              <input type="password" name="member_pw" placeholder="패스워드입력" value="Glow1320!" required/>
+            </div>
+            <div class="login__lost-pw">
+              <span>Forgot password?</span>
+            </div>
+	          <button type="submit" class="btn btn-primary" id="login_btn">login</button>
           </div>
-          <div class="login__pw">
-            <i class="fa fa-lock"></i>
-            <input type="password" />
-          </div>
-          <div class="login__lost-pw">
-            <span>Forgot password?</span>
-          </div>
-          <button class="btn btn-primary">login</button>
         </div>
       </div>
     </div>
-  </div>
-</form>
+  </form>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script trype="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+  <script trype="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
+</body>
+<script language="javascript">
+/*
+$('#login_btn').click(function () {
+  BootstrapDialog.alert('아이디를 입력하세요');
+    param = {};
+    param.member_id = $.trim($("#member_id").val());
+    param.member_pw = $.trim($("#member_pw").val());
 
-{% endblock %} {% block title %} 로그인 {% endblock %} {% block js%}
-<script></script>
-{% endblock %} {% block css %}
-<link rel="stylesheet" href="{% static 'css/login.css' %}" />{% endblock%}
+    if param.member_id == '') {
+       $('#member_id').val('');
+       BootstrapDialog.alert('아이디를 입력하세요');
+       return null;
+    }
 
-<!-- <img
-        src="http://office.gwsystem.co.kr:8000/static/img/logo.jpg"
-        alt="gw_logo.jpg"
-      /> -->
+    if param.member_pw == '') {
+       $('#member_pw').val('');
+       BootstrapDialog.alert('패스워드를 입력하세요');
+       return null
+    }
+
+    checkLogin (param);
+
+});
+
+function checkLogin(param) {
+    $('#login_btn').attr('disabled', true);
+    $.ajax({
+        type: 'POST',
+        url: '/login/check',
+        contentType: "application/json",
+        dataType: "json",
+        data: JSON.stringify(param),
+        success: function(data) {
+          BootStrapDialog.alert('로그인에 성공하셨습니다.');
+          windows.location.href = '/assets'
+        },
+        error: function(jqXHR, textStatus, error) {
+          BootstrapDialog.alert('아이디 또는 패스워드를 확인하세요');
+          $('#member_id').val('');
+          $('#member_pw').val('');
+          $('#login_btn').attr('disabled', false);
+        }
+    }).then(function(data) {
+       
+    });
+}
+*/
+</script>
+</html>
