--- a/assets/templates/assets_main/assets_add.html
+++ b/assets/templates/assets_main/assets_add.html
@@ -3,7 +3,7 @@
   <div class="card assets">
     <div class="card-header assets-header">
       <i class="fa fa-pencil-square-o"></i>
-      <h5 class="card-title assets-header__title">자산 등록</h5>
+      <h5 class="card-title assets-header__title">&nbsp;자산 등록</h5>
     </div>
     <div class="card-body">
       <form class="rental__form" method="POST">{% csrf_token %}
@@ -53,7 +53,8 @@
             <div class="form-group">
               <label>구매 날짜</label>
               <input type="text" name="purchase_date" id="datepicker1"
-                class="form-control calendar__start hasDatepicker" autocomplete="off" id="asset_purchase-date">
+                class="form-control calendar__start hasDatepicker" autocomplete="off" id="asset_purchase-date"
+                data-provide="datepicker" placeholder="&#xf073;">
             </div>
             <div class="form-group">
               <label>기 타</label>
@@ -73,6 +74,13 @@
     </div>
   </div>
 </div>
+
+<div class="input-group date" data-provide="datepicker" id="datepicker3">
+  <input type="text" class="form-control">
+  <div class="input-group-addon">
+  </div>
+</div>
+
 {% endblock %} {% block title %} 자산관리 대여 {% endblock %}
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
