--- a/assets/templates/assets_main/assets_main.html
+++ b/assets/templates/assets_main/assets_main.html
@@ -3,11 +3,11 @@
   <div class="card assets">
     <div class="card-header assets-header">
       <i class="fa fa-desktop"></i>
-      <h5 class="card-title assets-header__title">자산 현황</h5>
+      <h5 class="card-title assets-header__title">&nbsp;자산 현황</h5>
     </div>
     <div class="card-body">
       <p class="card-text">
-        <table class="table table-striped table-bordered table-hover assets_table" id="myTable">
+        <table class="table table-striped table-bordered table-hover assets_table " id="myTable1">
           <thead>
             <tr>
               <th>소유자</th>
@@ -56,9 +56,55 @@
   </div>
 </div>
 
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">자산 정보</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="modal-body__asset">
+          <span>자산 정보</span>
+          <span id="asset_mnfacture"></span>
+          <input type="hidden" id="asset_id" value="">
+          <div class="modal-body__stdate">
+            <span></span>
+            <input type="text" name="purchase_date" id="datepicker1" class="form-control calendar__start hasDatepicker"
+              autocomplete="off" placeholder="&#xf073;">
+          </div>
+          <div class="modal-body__eddate">
+            <span>반납 날짜</span>
+            <input type="text" name="purchase_date" id="datepicker2" class="form-control calendar__start hasDatepicker"
+              autocomplete="off" placeholder="&#xf073;">
+          </div>
+          <div class="modal-body__id">
+            <span>대여자</span>
+            {{ rent_form.member_name }}
+          </div>
+          <div class="modal-body__comments">
+            <span>기타 </span>
+            <textarea class="form-control col-sm-12" rows="5" id="asset_comments"></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock content %} {% block title %} 자산 현황 {% endblock %}
 
 {% block css %}
+<link rel="stylesheet" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+</link>
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
 {% endblock %}
 
