--- a/assets/templates/assets_main/assets_status.html
+++ b/assets/templates/assets_main/assets_status.html
@@ -3,53 +3,51 @@
   <div class="card assets">
     <div class="card-header assets-header">
       <i class="fa fa-desktop"></i>
-      <h5 class="card-title assets-header__title">자산 대여 현황</h5>
+      <h5 class="card-title assets-header__title">&nbsp;대여신청 및 현황</h5>
     </div>
     <div class="card-body">
       <p class="card-text">
-        <table class="table table-striped table-bordered table-hover assets_table" id="myTable">
+        <table class="table table-striped table-bordered table-hover assets_table" id="asset__table">
           <thead>
             <tr>
               <th>대여자</th>
               <th>제조사 및 모델명</th>
+              <th>시리얼</th>
               <th>상태</th>
               <th>기타</th>
               <th>반납처리</th>
             </tr>
           </thead>
-          {% for asset_keep in assets_keep %}
+          {% for asset in assets %}
           <tr>
-            <td>{{ asset_keep.member_name }}</td>
-            <td>{{ asset_keep.mnfacture }} ({{ asset_keep.model }})</td>
-            {% if asset_keep.is_state == 5 %}
+            <td>{{ asset.member_name }}</td>
+            <td>{{ asset.mnfacture }} ({{ asset.model }})</td>
+            <td>{{ asset.serial }} </td>
+            {% if asset.is_state == 5 %}
             <td>보관중</td>
+            {% else %}
+            <td>대여중</td>
             {% endif %}
-            {% if asset_keep.comments is None %}
+            {% if asset.comments is None %}
             <td></td>
             {% else %}
-            <td>{{ asset_keep.comments }}</td>
+            <td>{{ asset.comments }}</td>
             {% endif %}
+            {% if asset.is_state == 5 %}
             <td>
-              <button type="button" class="btn btn-success" id="rent-btn{{asset_keep.id}}"
-                onclick="asset_rent('{{asset_keep.id}}', '{{asset_keep.mnfacture}}', '{{asset_keep.model}}')">대여하기</button>
+              <button type="button" class="btn btn-success" id="rent-btn{{asset.id}}"
+                onclick="asset_rent('{{asset.id}}', '{{asset.mnfacture}}', '{{asset.model}}')">대여하기</button>
             </td>
+            {% else %}
+            <td>
+              <button type="button" class="btn btn-primary" id="rent-btn{{asset.id}}"
+                onclick="asset_return('{{asset.id}}')">반납하기</button>
+            </td>
+            {% endif %}
+
           </tr>
           {% endfor %}
 
-          {% for asset_rent in assets_rent %}
-          <tr>
-            <td>{{ asset_rent.member_name }}</td>
-            <td>{{ asset_rent.mnfacture }} ({{ asset_rent.model }})</td>
-            {% if asset_rent.is_state == 3 %}
-            <td>대여중</td>
-            {% endif %}
-            <td>{{ asset_rent.comments }}</td>
-            <td>
-              <button type="button" class="btn btn-primary" id="rent-btn{{asset_rent.id}}"
-                onclick="asset_return('{{asset_rent.id}}')">반납하기</button>
-            </td>
-          </tr>
-          {% endfor %}
         </table>
       </p>
     </div>
@@ -65,7 +63,7 @@
       {% csrf_token %}
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">대여신청</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" onclick="asset_rent_cancel()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -77,12 +75,12 @@
           <div class="modal-body__stdate">
             <span>대여 날짜</span>
             <input type="text" name="purchase_date" id="datepicker1" class="form-control calendar__start hasDatepicker"
-              autocomplete="off">
+              autocomplete="off" placeholder="&#xf073;">
           </div>
           <div class="modal-body__eddate">
             <span>반납 날짜</span>
             <input type="text" name="purchase_date" id="datepicker2" class="form-control calendar__start hasDatepicker"
-              autocomplete="off">
+              autocomplete="off" placeholder="&#xf073;">
           </div>
           <div class="modal-body__id">
             <span>대여자</span>
@@ -102,7 +100,7 @@
   </div>
 </div>
 
-{% endblock content %} {% block title %} 자산 대여 현황 {% endblock %}
+{% endblock content %} {% block title %} 대여신청 및 현황 {% endblock %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
