modified verticla align of table

--- a/assets/static/css/pages/assets_global.css
+++ b/assets/static/css/pages/assets_global.css
@@ -1,3 +1,7 @@
 @import "./assets_add.css";
 @import "./assets_main.css";
 @import "./assets_status.css";
+
+.table td {
+  vertical-align: unset !important;
+}
