modified menu text

--- a/assets/templates/assets_main/assets_add.html
+++ b/assets/templates/assets_main/assets_add.html
@@ -57,7 +57,7 @@
                 data-provide="datepicker" placeholder="&#xf073;">
             </div>
             <div class="form-group">
-              <label>기 타</label>
+              <label>기 타 (최초사용자 입력)</label>
               <textarea class="form-control col-sm-12" rows="5" id="asset_comments"></textarea>
             </div>
           </div>
