--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -8,8 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>로그인</title>
   <link rel="stylesheet" href="{% static 'css/login.css' %}" />
-  <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" />
-  <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
+  <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/fontAwesome/font-awesome.css' %}">
 </head>
 
 <body class="body">
@@ -54,8 +54,8 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
-  <script trype="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
-  <script trype="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
+  <script trype="text/javascript" src="{% static 'js/bootstrap/jquery-3.4.1.min.js' %}"></script>
+  <script trype="text/javascript" src="{% static 'js/bootstrap/bootstrap.js' %}"></script>
 </body>
 <script language="javascript">
 /*
