--- a/templates/base.html
+++ b/templates/base.html
@@ -52,8 +52,9 @@
             문서관리
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="{% url 'sites_main' %}">문서 현황</a>
-            <a class="dropdown-item" href="{% url 'sites_add' %}">문서 등록</a>
+            <a class="dropdown-item" href="{% url 'sites_main' %}">고객사 현황</a>
+            <a class="dropdown-item" href="{% url 'sites_add' %}">고객사 등록</a>
+            <a class="dropdown-item" href="{% url 'document_upload' %}">문서 등록</a>
           </div>
         </li>
         <li class="nav-item dropdown">
