--- a/sites/templates/sites/sites_add.html
+++ b/sites/templates/sites/sites_add.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %} {% block content %} {% load static %}
 
 <div class="container">
-    <div class="card document">
-        <div class="card-header document__header">
+    <div class="card sites">
+        <div class="card-header sites__header">
             <i class="fa fa-external-link"></i>
-            <h5 class="card-title document__title">&nbsp;고객사 등록</h5>
+            <h5 class="card-title sites__title">&nbsp;고객사 등록</h5>
         </div>
         <div class="card-body">
             <form class="sites__add" method="POST" name="ajaxform" onsubmit="return checkValues()"
