Modified js file name

--- a/sites/templates/sites/sites_upload.html
+++ b/sites/templates/sites/sites_upload.html
@@ -110,6 +110,6 @@
 {% block js %}
 <script src="{% static 'js/selectpicker/bootstrap-select.js' %}"></script>
 <script src="{% static 'js/fineuploader/jquery.fine-uploader.js' %}"></script>
-<script src="{% static 'js/sites/test.js' %}"></script>
+<script src="{% static 'js/sites/upload.js' %}"></script>
 <script src="{% static 'js/sites/jquery.form.js' %}"></script>
 {% endblock %}
