Modified form action

--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="body">
-  <form class="login__content container login-size" action="/login/check" method="post">
+  <form class="login__content container login-size" action="/login/check/" method="post">
     {% csrf_token %}
     <div class="login__form">
       <div class="login__top">
