--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
             장비현황관리
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="{% url 'equipment_main' %}">고객사 운용제품현황</a>
             <a class="dropdown-item" href="#">Another action</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
