--- a/static/css/partials/container.css
+++ b/static/css/partials/container.css
@@ -4,23 +4,17 @@
   }
 }
 
-.document .document__header,
-.sites .sites__header,
-.assets .assets-header {
+.card .card-header {
   display: flex;
   align-items: center;
 }
 
-.document__header i,
-.assets-header i,
-.sites__header i {
+.card-header i {
   font-size: 18px;
   font-weight: 600;
 }
 
-.document__header .document__title,
-.assets-header .assets-header__title,
-.sites__header .sites__title {
+.card-header .card-title {
   color: black;
   margin-bottom: 0px !important;
   font-weight: 700;
