Added input elements about rent state
Two input fields are added when the status of the asset is in rental.
 - First input is rent_date
 - Second input is return_date

--- a/assets/templates/assets_main/assets_add.html
+++ b/assets/templates/assets_main/assets_add.html
@@ -56,6 +56,16 @@
                 class="form-control calendar__start hasDatepicker" autocomplete="off" id="asset_purchase-date"
                 data-provide="datepicker" placeholder="&#xf073;">
             </div>
+            <div class="form-group rent_form">
+              <label>대여 날짜</label>
+              <input type="text" name="rent_date" id="rent_date" class="form-control calendar__start hasDatepicker"
+                autocomplete="off" id="asset_purchase-date" data-provide="datepicker" placeholder="&#xf073;">
+            </div>
+            <div class="form-group return_form">
+              <label>반납 날짜</label>
+              <input type="text" name="return_date" id="return_date" class="form-control calendar__start hasDatepicker"
+                autocomplete="off" id="asset_purchase-date" data-provide="datepicker" placeholder="&#xf073;">
+            </div>
             <div class="form-group">
               <label>기 타 (최초사용자 입력)</label>
               <textarea class="form-control col-sm-12" rows="5" id="asset_comments"></textarea>
